--- a/neo-config-test.yml
+++ b/neo-config-test.yml
@@ -1,2 +1,5 @@
-neo:
- hello: hello im test
+zuul:
+  routes:
+    user-service:
+      path: /**/consumer-movic/user/**
+      serviceId: consumer-movic
