增加网关的yml配置文件的内容

--- a/basic-gateway-server.yml
+++ b/basic-gateway-server.yml
@@ -1,2 +1,6 @@
-neo:
- hello: hello im dev 3
+zuul:
+  routes:
+    user-service:
+      path: /**/consumer-movic/user/**
+      serviceId: consumer-movic
+
